--- a/myPj/julia-set/d3-julia-dev copy.html
+++ b/myPj/julia-set/d3-julia-dev copy.html
@@ -10,10 +10,10 @@
     rel="stylesheet"
     crossorigin="anonymous"
   />
-  <!-- <link rel="stylesheet" href="css/d3-style.css" /> -->
-  <link rel="stylesheet" href="css/d3-base.css" />
-  <link rel="stylesheet" href="css/d3-components.css" />
-  <link rel="stylesheet" href="css/d3-utilities.cs" />
+  <link rel="stylesheet" href="css/d3-style.css" />
+  <link rel="stylesheet" href="css/base.css" />
+  <link rel="stylesheet" href="css/components.css" />
+  <link rel="stylesheet" href="css/utilities.css" />
   <script type="importmap">
   {
     "imports": {
@@ -23,19 +23,14 @@
   }
   </script>
 </head>
-<!-- <body> -->
-  <body class="d-flex flex-column bg-dark text-white">
+<body>
   <div id="navbar-placeholder"></div>
   <div id="offcanvas-placeholder"></div>
 
   <!-- 3D 描画領域 -->
-  <div id="canvas-container" class="position-relative overflow-hidden flex-grow-1">
+  <div id="canvas-container">
     <canvas id="legend-canvas"></canvas>
   </div>
-  
-  <!-- <div id="canvas-container">
-    <canvas id="legend-canvas"></canvas>
-  </div> -->
 
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
