--- a/myPj/julia-set/3d-partials/d3-offcanvas.html
+++ b/myPj/julia-set/3d-partials/d3-offcanvas.html
@@ -5,13 +5,13 @@
   id="offcanvasForm"
   aria-labelledby="offcanvasFormLabel"
 >
-  <div class="offcanvas-header mt-5">
-    <h5 class="offcanvas-title mt-3 fs-5" id="offcanvasFormLabel">パラメータ設定</h5>
+  <div class="offcanvas-header mt-4">
+    <h5 class="offcanvas-title fs-5" id="offcanvasFormLabel">パラメータ設定</h5>
     <button
-      type="button"
-      class="btn-close btn-close-white mt-2"
-      data-bs-dismiss="offcanvas"
-      aria-label="Close"
+    type="button"
+    class="btn-close btn-close-white"
+    data-bs-dismiss="offcanvas"
+    aria-label="Close"
     ></button>
   </div>
   <div class="offcanvas-body">
