--- a/myPj/julia-set/d3-julia-dev.html
+++ b/myPj/julia-set/d3-julia-dev.html
@@ -24,7 +24,7 @@
   </script>
 </head>
 <!-- <body> -->
-  <body class="d-flex flex-column bg-dark text-white">
+  <body class="d-flex flex-column">
   <div id="navbar-placeholder"></div>
   <div id="offcanvas-placeholder"></div>
 
