--- a/myPj/julia-set/3d-partials/d3-navbar.html
+++ b/myPj/julia-set/3d-partials/d3-navbar.html
@@ -1,12 +1,21 @@
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar bg-transparent position-fixed w-100">
+<!-- <nav class="navbar navbar-dark bg-dark"> -->
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Julia Set Inverse Mapping Visualizer</a>
-
+      <!-- <a class="navbar-brand" href="#">Julia Set Inverse Mapping Visualizer</a> -->
+      <!-- PC 以上（sm 以上）で表示される長いタイトル -->
+      <a class="navbar-brand d-none d-sm-block text-white" href="#">
+        Julia Set Inverse Mapping Visualizer
+      </a>
+      <!-- xs（スマホ）でだけ表示される短いタイトル -->
+      <a class="navbar-brand d-block d-sm-none text-white fs-6" href="#">
+        Julia Set Visualizer
+      </a>
+      
       <div class="mx-auto">
         <button id="btn-run" class="btn btn-success btn-sm me-2" type="button">
           Run
         </button>
-        <button id="btn-pause" class="btn btn-secondary btn-sm me-2 d-none" type="button">
+        <button id="btn-pause" class="btn btn-secondary btn-pause btn-sm me-2 d-none" type="button">
           Pause
         </button>
         <button id="btn-stop" class="btn btn-danger btn-sm" type="button">
