--- a/myPj/julia-set/d3-julia.html
+++ b/myPj/julia-set/d3-julia.html
@@ -4,111 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Julia Set Inverse Mapping Visualizer</title>
-
   <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
     crossorigin="anonymous"
   />
-
-  <style>
-    /* ─── レスポンシブな基本フォントサイズ ─── */
-    html {
-      font-size: 1.2vw; /* ビューポート幅の 1.2% */
-    }
-    @media (max-width: 768px) {
-      html {
-        font-size: 2.5vw;
-      }
-    }
-
-    body {
-      margin: 0;
-      height: 100vh;
-      background-color: #111;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-    }
-
-    /* ─── Canvas コンテナ ─── */
-    #canvas-container {
-      flex: 1;
-      position: relative;
-      overflow: hidden;
-      min-height: 0;
-    }
-
-    /* ─── 凡例キャンバス ─── */
-    #legend-canvas {
-      position: absolute;
-      top: 1rem;
-      left: 1rem;
-      width: 5vw;
-      height: 20vw;
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      border-radius: 4px;
-      padding: 0.2rem;
-      z-index: 10;
-      pointer-events: none;
-    }
-    @media (max-width: 768px) {
-      #legend-canvas {
-        width: 7vw;
-        height: 25vw;
-        top: 0.5rem;
-        left: 0.5rem;
-      }
-    }
-
-    /* ─── Offcanvas (パラメータ設定) ─── */
-    .offcanvas.offcanvas-end {
-      width: 100%;
-      max-width: 300px; /* デスクトップでの最大幅 */
-    }
-    @media (max-width: 576px) {
-      .offcanvas.offcanvas-end {
-        width: 100%;
-        max-width: 100%;
-      }
-    }
-
-    /* ─── ナビバー ─── */
-    .navbar {
-      padding: 0.5rem 1rem;
-    }
-    .navbar-brand {
-      font-size: 1.2rem;
-    }
-    .navbar .btn {
-      padding: 0.25rem 0.5rem;
-      font-size: 0.9rem;
-    }
-
-    /* ─── フォームスタイル ─── */
-    .offcanvas-body .form-label {
-      font-size: 0.9rem;
-    }
-    .offcanvas-body .form-control {
-      font-size: 0.9rem;
-    }
-    .offcanvas-body .form-check-label {
-      font-size: 0.9rem;
-    }
-
-    /* ─── ステータス表示 ─── */
-    #status {
-      font-weight: bold;
-      color: #0f0;
-    }
-    .status-stopped {
-      color: #f00; /* 停止/エラー時は赤文字 */
-    }
-  </style>
-
-  <!-- Import Map（三.js 用モジュール解決）-->
+  <!-- <link rel="stylesheet" href="css/d3-style.css" /> -->
+  <link rel="stylesheet" href="css/d3-base.css" />
+  <link rel="stylesheet" href="css/d3-components.css" />
+  <link rel="stylesheet" href="css/d3-utilities.cs" />
   <script type="importmap">
   {
     "imports": {
@@ -118,136 +23,20 @@
   }
   </script>
 </head>
-<body>
-  <!-- ナビバー -->
-  <nav class="navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Julia Set Inverse Mapping Visualizer</a>
-
-      <div class="mx-auto">
-        <button id="btn-run" class="btn btn-success btn-sm me-2" type="button">
-          Run
-        </button>
-        <button id="btn-pause" class="btn btn-secondary btn-sm me-2 d-none" type="button">
-          Pause
-        </button>
-        <button id="btn-stop" class="btn btn-danger btn-sm" type="button">
-          Stop
-        </button>
-      </div>
-
-      <button
-        class="btn btn-outline-light btn-sm"
-        type="button"
-        data-bs-toggle="offcanvas"
-        data-bs-target="#offcanvasForm"
-        aria-controls="offcanvasForm"
-      >
-        設定
-      </button>
-    </div>
-  </nav>
-
-  <!-- Offcanvas: 設定フォーム -->
-  <div
-    class="offcanvas offcanvas-end text-dark bg-light"
-    tabindex="-1"
-    id="offcanvasForm"
-    aria-labelledby="offcanvasFormLabel"
-  >
-    <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasFormLabel">パラメータ設定</h5>
-      <button
-        type="button"
-        class="btn-close text-reset"
-        data-bs-dismiss="offcanvas"
-        aria-label="Close"
-      ></button>
-    </div>
-    <div class="offcanvas-body">
-      <form>
-        <!-- 凡例表示スイッチ -->
-        <div class="form-check form-switch mb-3">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="chk-legend"
-            checked
-          />
-          <label class="form-check-label" for="chk-legend">
-            凡例を表示
-          </label>
-        </div>
-
-        <!-- Re(c) -->
-        <div class="mb-3">
-          <label for="input-re" class="form-label">Re(c)</label>
-          <input
-            type="number"
-            step="0.01"
-            class="form-control"
-            id="input-re"
-          />
-        </div>
-        <!-- Im(c) -->
-        <div class="mb-3">
-          <label for="input-im" class="form-label">Im(c)</label>
-          <input
-            type="number"
-            step="0.01"
-            class="form-control"
-            id="input-im"
-          />
-        </div>
-        <!-- N (ポイント数) -->
-        <div class="mb-3">
-          <label for="input-n" class="form-label">N (ポイント数)</label>
-          <input
-            type="number"
-            min="10"
-            step="10"
-            class="form-control"
-            id="input-n"
-          />
-        </div>
-        <!-- maxIter -->
-        <div class="mb-3">
-          <label for="input-iter" class="form-label">maxIter</label>
-          <input
-            type="number"
-            min="1"
-            step="1"
-            class="form-control"
-            id="input-iter"
-          />
-        </div>
-
-        <!-- ステータス表示 -->
-        <div class="mb-3">
-          <span id="status">(待機中)</span>
-        </div>
-
-        <hr />
-        <p class="small text-muted">Run で描画開始（初期値が推奨パラメータです）</p>
-        <p class="small text-muted">赤色は発散と収束の境界です。</p>
-        <p class="small text-muted">ドラッグ・ホイールでカメラを移動できます。</p>
-        <p class="small text-muted">Stop を押すと初期状態に戻ります。</p>
-      </form>
-    </div>
-  </div>
+<!-- <body> -->
+  <body class="d-flex flex-column">
+  <div id="navbar-placeholder"></div>
+  <div id="offcanvas-placeholder"></div>
 
   <!-- 3D 描画領域 -->
-  <div id="canvas-container">
+  <div id="canvas-container" class="position-relative overflow-hidden flex-grow-1">
     <canvas id="legend-canvas"></canvas>
   </div>
 
-  <!-- Bootstrap JS (Bundle) -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"
   ></script>
-
-  <!-- エントリポイント：d3-init-app.js のみ読み込む -->
-  <script type="module" src="js/3d/d3-init-app.js"></script>
+  <script src="js/3d/d3-load-partials.js"></script>
 </body>
 </html>
