--- a/myPj/julia-set/d3-julia-dev.html
+++ b/myPj/julia-set/d3-julia-dev.html
@@ -30,6 +30,8 @@
 
   <!-- 3D 描画領域 -->
   <div id="canvas-container" class="position-relative overflow-hidden flex-grow-1">
+    <!-- Three.js のレンダーターゲットは下記 <canvas> とは別に生成される想定 -->
+    <!-- ここでは「凡例用キャンバス」を置いておく -->
     <canvas id="legend-canvas"></canvas>
   </div>
 
