--- a/myPj/julia-set/d3-julia-dev.html
+++ b/myPj/julia-set/d3-julia-dev.html
@@ -12,6 +12,7 @@
   />
   <!-- <link rel="stylesheet" href="css/d3-style.css" /> -->
   <link rel="stylesheet" href="css/d3-base.css" />
+  <link rel="stylesheet" href="css/d3-nav.css" />
   <link rel="stylesheet" href="css/d3-components.css" />
   <link rel="stylesheet" href="css/d3-utilities.cs" />
   <script type="importmap">
