--- a/myPj/julia-set/d3-julia-dev.html
+++ b/myPj/julia-set/d3-julia-dev.html
@@ -10,6 +10,7 @@
     rel="stylesheet"
     crossorigin="anonymous"
   />
+  <link rel="icon" href="/pjdhiro/favicon.ico" type="image/x-icon" />
   <!-- <link rel="stylesheet" href="css/d3-style.css" /> -->
   <link rel="stylesheet" href="css/d3-base.css" />
   <link rel="stylesheet" href="css/d3-nav.css" />
