設定完了ボタン

--- a/myPj/julia-set/3d-partials/d3-offcanvas.html
+++ b/myPj/julia-set/3d-partials/d3-offcanvas.html
@@ -87,6 +87,19 @@
         ドラッグ・ホイールでカメラを移動できます。<br />
         Stop を押すと初期状態に戻ります。
       </p>
+      
+      <!-- ─────────── ここから追加 ─────────── -->
+      <div class="d-grid mt-4">
+        <button
+          id="config-complete-btn"
+          class="btn btn-primary"
+          type="button"
+          data-bs-dismiss="offcanvas"
+        >
+          設定完了
+        </button>
+      </div>
+      <!-- ─────────── ここまで追加 ─────────── -->
     </form>
   </div>
 </div>
