説明文変更

--- a/myPj/julia-set/3d-partials/d3-offcanvas.html
+++ b/myPj/julia-set/3d-partials/d3-offcanvas.html
@@ -74,7 +74,7 @@
       </div>
 
       <!-- ステータス表示（白文字で） -->
-      <div class="mb-3">
+      <div class="mb-3 d-none">
         <span id="status" class="fs-6 fw-bold text-white">(待機中)</span>
       </div>
 
@@ -82,10 +82,10 @@
 
       <!-- 説明文を一つの <p> にまとめ、白文字で表示 -->
       <p class="small text-white">
-        Run で描画開始（初期値が推奨パラメータです）<br />
-        赤色は発散と収束の境界です。<br />
-        ドラッグ・ホイールでカメラを移動できます。<br />
-        Stop を押すと初期状態に戻ります。
+        Run：描画開始（初期値が推奨パラメータです）<br />
+        ドラッグ・ホイール：カメラを移動できます<br />
+        凡例：赤色は発散と収束の境界です<br />
+        設定完了：設定保存と描画消去<br />
       </p>
       
       <!-- ─────────── ここから追加 ─────────── -->
