天井カメラ

--- a/myPj/julia-set/d3-julia.html
+++ b/myPj/julia-set/d3-julia.html
@@ -35,6 +35,11 @@
     <!-- Three.js のレンダーターゲットは下記 <canvas> とは別に生成される想定 -->
     <!-- ここでは「凡例用キャンバス」を置いておく -->
     <canvas id="legend-canvas"></canvas>
+    <div class="mt-3 text-center">
+      <button id="btn-top-view" class="btn btn-sm mt-5 btn-secondary">
+        天井ビューに切り替え
+      </button>
+    </div>
   </div>
 
   <script
