--- a/myPj/julia-set/d3-julia.html
+++ b/myPj/julia-set/d3-julia.html
@@ -6,7 +6,13 @@
   <title>Julia Set Inverse Mapping Visualizer</title>
   <!-- Bootstrap CSS -->
   <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  crossorigin="anonymous"
+  />
+  <!-- Bootstrap Icons -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     rel="stylesheet"
     crossorigin="anonymous"
   />
@@ -35,11 +41,12 @@
     <!-- Three.js のレンダーターゲットは下記 <canvas> とは別に生成される想定 -->
     <!-- ここでは「凡例用キャンバス」を置いておく -->
     <canvas id="legend-canvas"></canvas>
-    <div class="mt-3 text-center">
-      <button id="btn-top-view" class="btn btn-sm mt-5 btn-secondary">
-        天井ビューに切り替え
+
+    <!-- ── 2D View ボタンをここに置く ── -->
+      <button id="btn-top-view" class="btn btn-top-view" type="button">
+        <i class="bi bi-grid-3x2-gap icon" aria-hidden="true"></i>
+        <span class="label">2D view</span>
       </button>
-    </div>
   </div>
 
   <script
