--- a/myPj/qt-st-visual/index.html
+++ b/myPj/qt-st-visual/index.html
@@ -39,12 +39,17 @@
   <!-- Offcanvas（パラメータフォーム）を読み込む placeholder -->
   <div id="offcanvas-placeholder"></div>
 
+  <!-- 必要に応じてページ固有説明文などを差し込む -->
+  <div id="main-content-placeholder"></div>
+  <!-- Three.js の描画領域 -->
+  <div id="canvas-area-placeholder"></div>
+
   <!-- 3D 描画領域 -->
-  <div id="canvas-container" class="position-relative flex-grow-1">
+  <!-- <div id="canvas-container" class="position-relative flex-grow-1"> -->
     <!-- Three.js がレンダリングする WebGL Canvas（JS 内で生成） -->
     <!-- 凡例用 canvas などもここに置く -->
-    <canvas id="legend-canvas"></canvas>
-  </div>
+    <!-- <canvas id="legend-canvas"></canvas> -->
+  <!-- </div> -->
 
   <!-- Bootstrap JS (Offcanvas 用) -->
   <script
