--- a/myPj/julia-set/d3-julia.html
+++ b/myPj/julia-set/d3-julia.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-site-verification" content="google1dd9a6e9f696a4f9" />
   <title>Julia Set Inverse Mapping Visualizer</title>
   <!-- Bootstrap CSS -->
   <link
