--- a/myPj/qt-st-visual/index.html
+++ b/myPj/qt-st-visual/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="google-site-verification" content="google1dd9a6e9f696a4f9" />
-  <title>QT-ST-Visual (Quaternion Stereographic Visualizer)</title>
+  <title>Quaternion Stereographic Visualizer</title>
   <!-- three.js -->
   <script type="importmap">
   {
