--- a/myPj/qt-st-visual/index.html
+++ b/myPj/qt-st-visual/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="google-site-verification" content="google1dd9a6e9f696a4f9" />
-  <title>Quaternion Stereographic Visualizer</title>
+  <title>Quaternion Rotation Stereographic Projection Visualizer（四元数ステレオ投影ビジュアライザ）</title>
   <!-- three.js -->
   <script type="importmap">
   {
@@ -26,52 +26,23 @@
     crossorigin="anonymous"
   />
 
-  <!-- プロジェクトの共通 CSS -->
   <link rel="stylesheet" href="css/qt-base.css" />
   <link rel="stylesheet" href="css/qt-nav.css" />
   <link rel="stylesheet" href="css/qt-components.css" />
-  <style>
-    /* スライダー用の簡易スタイル */
-    #ui {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      padding: 8px;
-      background: rgba(0,0,0,0.5);
-      color: #fff;
-      font-family: sans-serif;
-      font-size: 14px;
-      border-radius: 4px;
-    }
-    #ui input {
-      width: 100px;
-    }
-    #ui label {
-      display: block;
-      margin-top: 6px;
-    }
-  </style>
 </head>
 
 <body class="d-flex flex-column">
-  <!-- ナビゲーションバーを partial で読み込む場合 -->
   <div id="navbar-placeholder"></div>
-
-  <!-- Offcanvas（パラメータフォーム）を読み込む placeholder -->
   <div id="offcanvas-placeholder"></div>
-
-  <!-- 必要に応じてページ固有説明文などを差し込む -->
   <div id="main-content-placeholder"></div>
-  <!-- Three.js の描画領域 -->
+  <!-- Three.js の描画領域　自動挿入 -->
   <div id="canvas-area-placeholder"></div>
 
-  <!-- Bootstrap JS (Offcanvas 用) -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"
   ></script>
-
-  <!-- main.js: URL クエリを読み、対応モジュールを動的 import -->
   <script type="module" src="./app.js"></script>
+
 </body>
 </html>
