--- a/myPj/qt-st-visual/index.html
+++ b/myPj/qt-st-visual/index.html
@@ -14,6 +14,15 @@
     }
   }
   </script>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WV09PB2PZT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-WV09PB2PZT');
+  </script>
+  <!-- /Google Analytics -->
   <!-- Bootstrap ／ Icons の CDN -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
