--- a/myPj/julia-set/d3-julia.html
+++ b/myPj/julia-set/d3-julia.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="css/d3-base.css" />
   <link rel="stylesheet" href="css/d3-nav.css" />
   <link rel="stylesheet" href="css/d3-components.css" />
-  <link rel="stylesheet" href="css/d3-utilities.cs" />
+  <link rel="stylesheet" href="css/d3-utilities.css" />
   <script type="importmap">
   {
     "imports": {
