--- a/myPj/julia-set/d3-julia.html
+++ b/myPj/julia-set/d3-julia.html
@@ -2,67 +2,33 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Julia Set Inverse Mapping Visualizer</title>
-  <meta name="google-site-verification" content="google1dd9a6e9f696a4f9" />
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WV09PB2PZT"></script>
+  <title>リダイレクト中…</title>
+  <meta http-equiv="refresh" content="0; url=https://uminomae.github.io/pjdhiro/myPj/qt-st-visual/?alg=julia-inverse" />
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-WV09PB2PZT');
+    // 万一メタリフレッシュが効かない場合は JS でも飛ばす
+    window.location.replace('https://uminomae.github.io/pjdhiro/myPj/qt-st-visual/?alg=julia-inverse');
   </script>
-  <!-- /Google Analytics -->
-  <!-- Bootstrap CSS -->
-  <link
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-  rel="stylesheet"
-  crossorigin="anonymous"
-  />
-  <!-- Bootstrap Icons -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    rel="stylesheet"
-    crossorigin="anonymous"
-  />
-  <link rel="icon" href="/pjdhiro/favicon.ico" type="image/x-icon" />
-  <!-- <link rel="stylesheet" href="css/d3-style.css" /> -->
-  <link rel="stylesheet" href="css/d3-base.css" />
-  <link rel="stylesheet" href="css/d3-nav.css" />
-  <link rel="stylesheet" href="css/d3-components.css" />
-  <link rel="stylesheet" href="css/d3-utilities.css" />
-  <script type="importmap">
-  {
-    "imports": {
-      "three": "https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.module.js",
-      "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.152.0/examples/jsm/"
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #111;
+      color: #fff;
+      font-family: sans-serif;
     }
-  }
-  </script>
+    a {
+      color: #5fa;
+    }
+  </style>
 </head>
-<!-- <body> -->
-  <body class="d-flex flex-column">
-  <div id="navbar-placeholder"></div>
-  <div id="offcanvas-placeholder"></div>
-
-  <!-- 3D 描画領域 -->
-  <div id="canvas-container" class="position-relative overflow-hidden flex-grow-1">
-    <!-- Three.js のレンダーターゲットは下記 <canvas> とは別に生成される想定 -->
-    <!-- ここでは「凡例用キャンバス」を置いておく -->
-    <canvas id="legend-canvas"></canvas>
-
-    <!-- ── 2D View ボタンをここに置く ── -->
-      <button id="btn-top-view" class="btn btn-top-view" type="button">
-        <i class="bi bi-grid-3x2-gap icon" aria-hidden="true"></i>
-        <span class="label">2D view</span>
-      </button>
+<body>
+  <div>
+    <p>自動的に <strong>https://uminomae.github.io/pjdhiro/myPj/qt-st-visual/?alg=julia-inverse</strong> へ移動します。</p>
+    <p>もし自動で移動しない場合は、以下のリンクをクリックしてください：</p>
+    <p><a href="https://uminomae.github.io/pjdhiro/myPj/qt-st-visual/?alg=julia-inverse">https://uminomae.github.io/pjdhiro/myPj/qt-st-visual/?alg=julia-inverse を開く</a></p>
   </div>
-
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    crossorigin="anonymous"
-  ></script>
-  <script src="js/3d/d3-load-partials.js"></script>
 </body>
 </html>
