hero img kesson

--- a/assets/html/hero-complete.html
+++ b/assets/html/hero-complete.html
@@ -138,6 +138,6 @@
       <p>Kesson-Driven Thinking</p>
     </div>
   </div>
-  <p class="label">Julia集合 × 呼吸する光点</p>
+  <!-- <p class="label">Julia集合 × 呼吸する光点</p> -->
 </body>
 </html>
